<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_card_top"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardUseCompatPadding="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_card">

        <TextView
            style="@style/MyTitleTextViewStyle"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/MyTextViewStyle"
            android:autoLink="phone"
            android:drawableStart="@drawable/phone_number"
            android:text="@string/phone"
            android:textColor="@color/colorDarkGray"
            />

        <TextView
            android:id="@+id/tv_email"
            style="@style/MyTextViewStyle"
            android:autoLink="email"
            android:drawableStart="@drawable/email"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/MyTextViewStyle"
            android:autoLink="map"
            android:drawableStart="@drawable/address"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_business_hours"
            style="@style/MyTextViewStyle"
            android:drawableStart="@drawable/hours"
            android:text="@string/business_hours" />

    </LinearLayout>

</android.support.v7.widget.CardView>

